--- a/index.html
+++ b/index.html
@@ -1,60 +1,98 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
-    <title>SmartCargo Advisory | May Roga LLC</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
-    <style>
-        body { background: #f0f2f5; padding: 15px; font-family: sans-serif; }
-        .app-card { max-width: 500px; margin: auto; background: white; border-top: 8px solid #001a35; padding: 25px; box-shadow: 0 4px 15px rgba(0,0,0,0.2); border-radius: 8px; }
-        .mkt-banner { background: #fffde7; border: 1px solid #fbc02d; padding: 12px; border-radius: 5px; margin-bottom: 15px; font-size: 11px; font-weight: bold; }
-        #previewContainer { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin: 15px 0; background: #f8f9fa; padding: 10px; border-radius: 5px; }
-        #previewContainer img { width: 100%; height: 90px; object-fit: cover; border: 2px solid #001a35; border-radius: 4px; }
-        .voice-btn { background: #d32f2f; color: white; border: none; padding: 12px; width: 100%; font-weight: bold; cursor: pointer; border-radius: 4px; }
-        .btn-execute { background: #1b5e20; color: white; width: 100%; height: 55px; font-weight: bold; border-radius: 5px; cursor: pointer; border: none; font-size: 16px; margin-top: 10px; }
-        #paymentModal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:1000; justify-content:center; align-items:center; }
-        .modal-content { background:white; padding:30px; border-radius:8px; width:90%; max-width:400px; text-align:center; }
-        .report-box { border: 2px solid #001a35; padding: 15px; margin-top: 20px; background: #fff; white-space: pre-wrap; font-size: 14px; font-weight: bold; color: #1b5e20; }
-    </style>
-</head>
-<body>
-<div class="app-card">
-    <div style="text-align:center;">
-        <h4 style="margin:0; color:#001a35; font-weight:bold;">SMARTCARGO</h4>
-        <p style="margin:0; color:#d4af37; font-size:10px; font-weight:bold;">TECHNICAL ADVISORY BY MAY ROGA LLC</p>
-    </div>
-    <div class="mkt-banner" id="mkt_banner"></div>
-    <div style="text-align: right; margin-bottom: 10px;">
-        <button onclick="setLang('en')" style="font-size:10px;">EN</button>
-        <button onclick="setLang('es')" style="font-size:10px;">ES</button>
-    </div>
-    <div style="border: 2px dashed #001a35; padding: 20px; text-align: center; cursor: pointer;" onclick="document.getElementById('fileInput').click()">
-        <strong id="t_scan">📷 CARGAR EVIDENCIA</strong>
-    </div>
-    <input type="file" id="fileInput" accept="image/*" multiple capture="environment" style="display:none">
-    <div id="previewContainer"></div>
-    <button id="voiceBtn" class="voice-btn">🎤 <span id="t_voice">DESCRIBIR POR VOZ</span></button>
-    <textarea id="promptArea" class="u-full-width" style="height: 80px; margin-top:10px;"></textarea>
-    <button id="submitBtn" class="btn-execute">OBTENER SOLUCIÓN AHORA</button>
-    <button class="u-full-width" onclick="location.reload()" style="font-size: 10px; margin-top:15px; border:none; background:none; color:#777;">🗑️ BORRAR TODO</button>
-    <div id="loader" style="display:none; text-align:center; margin-top:15px;"><strong>GENERANDO SOLUCIÓN TÉCNICA...</strong></div>
-    <div id="advResponse"></div>
-</div>
+const translations = {
+    en: {
+        act: "1. Service Activation",
+        sol: "2. Solution Center",
+        m_title: "Why SmartCargo?",
+        m_desc: "We provide stability to the entire logistics chain. We prevent fines and holds so the paying customer never loses money.",
+        l_title: "⚠️ Legal Shield",
+        l_desc: "We are PRIVATE ADVISORS. Not IATA/TSA/DOT. We provide technical solutions; we don't certify DG or handle cargo."
+    },
+    es: {
+        act: "1. Activación de Servicio",
+        sol: "2. Centro de Soluciones",
+        m_title: "¿Por qué SmartCargo?",
+        m_desc: "Damos estabilidad a toda la cadena logística. Evitamos multas y retenciones para que el cliente que paga nunca pierda dinero.",
+        l_title: "⚠️ Blindaje Legal",
+        l_desc: "Somos ASESORES PRIVADOS. No somos IATA/TSA/DOT. Damos soluciones técnicas; no certificamos carga peligrosa ni manipulamos carga."
+    }
+};
 
-<div id="paymentModal">
-    <div class="modal-content">
-        <h5>Activar Asesoría Técnica</h5>
-        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / ID">
-        <select id="priceSelect" class="u-full-width">
-            <option value="5">Express ($5)</option>
-            <option value="10">Standard ($10)</option>
-            <option value="95">Expert ($95)</option>
-        </select>
-        <button id="activateBtn" class="u-full-width" style="background:#001a35; color:white; height:45px; border:none; font-weight:bold;">PAGAR Y ACTIVAR</button>
-        <button onclick="document.getElementById('paymentModal').style.display='none'" style="border:none; background:none; color:red; margin-top:10px;">Cerrar</button>
-    </div>
-</div>
-<script src="app.js"></script>
-</body>
-</html>
+let timer;
+
+function setLang(lang) {
+    localStorage.setItem("user_lang", lang);
+    const t = translations[lang] || translations.en;
+    document.getElementById("t_act").innerText = t.act;
+    document.getElementById("t_sol").innerText = t.sol;
+    document.getElementById("m_title").innerText = t.m_title;
+    document.getElementById("m_desc").innerText = t.m_desc;
+    document.getElementById("l_title").innerText = t.l_title;
+    document.getElementById("l_desc").innerText = t.l_desc;
+}
+
+function unlock() {
+    document.getElementById("mainApp").style.opacity = "1";
+    document.getElementById("mainApp").style.pointerEvents = "all";
+    document.getElementById("accessSection").style.display = "none";
+}
+
+document.addEventListener("DOMContentLoaded", () => {
+    setLang(localStorage.getItem("user_lang") || "en");
+
+    const params = new URLSearchParams(window.location.search);
+    if (params.get("access") === "granted" || localStorage.getItem("sc_auth") === "true") {
+        localStorage.setItem("sc_auth", "true");
+        unlock();
+    }
+
+    document.getElementById("activateBtn").onclick = async () => {
+        const awb = document.getElementById("awbField").value || "N/A";
+        const amt = document.getElementById("priceSelect").value;
+        const user = prompt("ADMIN USER:");
+        const pass = prompt("ADMIN PASS:");
+
+        const fd = new FormData();
+        fd.append("awb", awb); fd.append("amount", amt);
+        if(user) fd.append("user", user); if(pass) fd.append("password", pass);
+
+        const res = await fetch(`/create-payment`, { method: "POST", body: fd });
+        const data = await res.json();
+        if(data.url) window.location.href = data.url;
+    };
+
+    document.getElementById("advForm").onsubmit = async (e) => {
+        e.preventDefault();
+        const out = document.getElementById("advResponse");
+        out.innerHTML = "<h4>🔍 Analyzing technical solutions...</h4>";
+       
+        const fd = new FormData(e.target);
+        fd.append("lang", localStorage.getItem("user_lang") || "en");
+
+        const res = await fetch(`/advisory`, { method: "POST", body: fd });
+        const data = await res.json();
+        const curLang = localStorage.getItem("user_lang") || "en";
+       
+        out.innerHTML = `
+            <div id="finalReport" class="report-box">
+                <h3 style="color:#01579b; border-bottom:2px solid #ffd600;">TACTICAL ACTION PLAN</h3>
+                <p style="white-space: pre-wrap;">${data.data}</p>
+                <hr>
+                <p style="font-size:0.7em; color:gray;"><strong>Legal Notice:</strong> ${translations[curLang].l_desc}</p>
+            </div>`;
+        document.getElementById("actionBtns").style.display = "flex";
+
+        // Iniciar cronómetro de privacidad
+        document.getElementById("timerBox").style.display = "block";
+        let timeLeft = 300;
+        clearInterval(timer);
+        timer = setInterval(() => {
+            timeLeft--;
+            document.getElementById("secs").innerText = timeLeft;
+            if(timeLeft <= 0) location.reload();
+        }, 1000);
+    };
+});
+
+function downloadPDF() { html2pdf().from(document.getElementById("finalReport")).save("SmartCargo_Report.pdf"); }
+function shareWA() { window.open(`https://wa.me/?text=${encodeURIComponent(document.getElementById("finalReport").innerText)}`, '_blank'); }
+
