--- a/index.html
+++ b/index.html
@@ -1,69 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SmartCargo Advisor 360° | MAY ROGA LLC</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.10.1/html2pdf.bundle.min.js"></script>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+    <title>SmartCargo Advisory | May Roga LLC</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
-        :root { --blue: #01579b; --gold: #ffd600; }
-        .lang-bar { background: #000; padding: 10px; display: flex; gap: 8px; justify-content: center; position: sticky; top: 0; z-index: 999; }
-        .lang-btn { cursor: pointer; border: 1px solid var(--gold); background: transparent; color: var(--gold); padding: 6px 12px; border-radius: 4px; font-weight: bold; }
-        .mission-box { background: #e3f2fd; border-left: 5px solid var(--blue); padding: 15px; margin: 20px 0; color: #000; }
-        .shield-box { background: #fff3e0; border: 2px solid #e65100; padding: 15px; font-size: 0.85em; margin: 20px 0; }
-        #mainApp { opacity: 0.1; pointer-events: none; transition: 0.5s; border-top: 3px solid var(--blue); margin-top: 20px; }
-        .report-box { background: #fff; color: #000; padding: 25px; border: 2px solid var(--blue); border-radius: 8px; }
-        #timerBox { display: none; text-align: center; color: red; font-weight: bold; padding: 10px; border: 1px solid red; margin-bottom: 10px; }
+        body { background: #f0f2f5; padding: 15px; font-family: sans-serif; }
+        .app-card { max-width: 500px; margin: auto; background: white; border-top: 8px solid #001a35; padding: 25px; box-shadow: 0 4px 15px rgba(0,0,0,0.2); border-radius: 8px; }
+        .mkt-banner { background: #fffde7; border: 1px solid #fbc02d; padding: 12px; border-radius: 5px; margin-bottom: 15px; font-size: 11px; font-weight: bold; }
+        #previewContainer { display: grid; grid-template-columns: repeat(3, 1fr); gap: 10px; margin: 15px 0; background: #f8f9fa; padding: 10px; border-radius: 5px; }
+        #previewContainer img { width: 100%; height: 90px; object-fit: cover; border: 2px solid #001a35; border-radius: 4px; }
+        .voice-btn { background: #d32f2f; color: white; border: none; padding: 12px; width: 100%; font-weight: bold; cursor: pointer; border-radius: 4px; }
+        .btn-execute { background: #1b5e20; color: white; width: 100%; height: 55px; font-weight: bold; border-radius: 5px; cursor: pointer; border: none; font-size: 16px; margin-top: 10px; }
+        #paymentModal { display: none; position: fixed; top:0; left:0; width:100%; height:100%; background:rgba(0,0,0,0.8); z-index:1000; justify-content:center; align-items:center; }
+        .modal-content { background:white; padding:30px; border-radius:8px; width:90%; max-width:400px; text-align:center; }
+        .report-box { border: 2px solid #001a35; padding: 15px; margin-top: 20px; background: #fff; white-space: pre-wrap; font-size: 14px; font-weight: bold; color: #1b5e20; }
     </style>
 </head>
 <body>
-    <div class="lang-bar">
-        <button class="lang-btn" onclick="setLang('en')">EN 🇺🇸</button>
-        <button class="lang-btn" onclick="setLang('es')">ES 🇪🇸</button>
+<div class="app-card">
+    <div style="text-align:center;">
+        <h4 style="margin:0; color:#001a35; font-weight:bold;">SMARTCARGO</h4>
+        <p style="margin:0; color:#d4af37; font-size:10px; font-weight:bold;">TECHNICAL ADVISORY BY MAY ROGA LLC</p>
     </div>
-
-    <header style="text-align: center;">
-        <h1>SmartCargo ADVISORY</h1>
-        <p>Technical Consulting by <strong>MAY ROGA LLC</strong></p>
-    </header>
-
-    <div class="mission-box">
-        <h3 id="m_title">Why SmartCargo?</h3>
-        <p id="m_desc">We provide stability to the entire logistics chain. From Shippers and Forwarders to Drivers and Operators, our system ensures everyone can verify cargo status. <strong>We prevent fines, holds, and returns</strong> so the paying customer never loses money.</p>
+    <div class="mkt-banner" id="mkt_banner"></div>
+    <div style="text-align: right; margin-bottom: 10px;">
+        <button onclick="setLang('en')" style="font-size:10px;">EN</button>
+        <button onclick="setLang('es')" style="font-size:10px;">ES</button>
     </div>
-
-    <div class="shield-box">
-        <h4 id="l_title">⚠️ Legal Shield / Blindaje Legal</h4>
-        <p id="l_desc">We are PRIVATE ADVISORS. We are NOT IATA, TSA, DOT, or government regulators. We provide technical solutions to prevent delays; we do not certify dangerous goods and we do not touch or handle cargo.</p>
+    <div style="border: 2px dashed #001a35; padding: 20px; text-align: center; cursor: pointer;" onclick="document.getElementById('fileInput').click()">
+        <strong id="t_scan">📷 CARGAR EVIDENCIA</strong>
     </div>
+    <input type="file" id="fileInput" accept="image/*" multiple capture="environment" style="display:none">
+    <div id="previewContainer"></div>
+    <button id="voiceBtn" class="voice-btn">🎤 <span id="t_voice">DESCRIBIR POR VOZ</span></button>
+    <textarea id="promptArea" class="u-full-width" style="height: 80px; margin-top:10px;"></textarea>
+    <button id="submitBtn" class="btn-execute">OBTENER SOLUCIÓN AHORA</button>
+    <button class="u-full-width" onclick="location.reload()" style="font-size: 10px; margin-top:15px; border:none; background:none; color:#777;">🗑️ BORRAR TODO</button>
+    <div id="loader" style="display:none; text-align:center; margin-top:15px;"><strong>GENERANDO SOLUCIÓN TÉCNICA...</strong></div>
+    <div id="advResponse"></div>
+</div>
 
-    <section id="accessSection">
-        <h2 id="t_act">1. Service Activation</h2>
-        <input type="text" id="awbField" placeholder="AWB / Loading Reference">
-        <select id="priceSelect">
-            <option value="35">Micro/Basic Load - $35</option>
-            <option value="120">Premium Integral Audit - $120</option>
+<div id="paymentModal">
+    <div class="modal-content">
+        <h5>Activar Asesoría Técnica</h5>
+        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / ID">
+        <select id="priceSelect" class="u-full-width">
+            <option value="5">Express ($5)</option>
+            <option value="10">Standard ($10)</option>
+            <option value="95">Expert ($95)</option>
         </select>
-        <button id="activateBtn" style="width:100%; background:var(--blue); color:white; font-weight:bold;">ACTIVATE ADVISOR</button>
-    </section>
-
-    <section id="mainApp">
-        <div id="timerBox">🔒 PRIVACY: Info wipes in <span id="secs">300</span>s</div>
-        <h2 id="t_sol">2. Solution Center</h2>
-        <form id="advForm">
-            <textarea name="prompt" id="promptArea" placeholder="Describe the issue or upload photos..." required></textarea>
-            <label>Inspection Photos (Max 3):</label>
-            <input type="file" name="images" id="imageFiles" accept="image/*" multiple>
-            <button type="submit" style="width:100%; background:#2e7d32; color:white; font-weight:bold;">GENERATE ACTION PLAN</button>
-        </form>
-        <div id="advResponse"></div>
-        <div id="actionBtns" style="display:none; margin-top:20px; gap:10px;">
-            <button onclick="downloadPDF()" style="flex:1;">📄 Download PDF</button>
-            <button onclick="shareWA()" style="flex:1; background:#25d366; color:white;">Share WhatsApp</button>
-        </div>
-    </section>
-
-    <script src="app.js"></script>
+        <button id="activateBtn" class="u-full-width" style="background:#001a35; color:white; height:45px; border:none; font-weight:bold;">PAGAR Y ACTIVAR</button>
+        <button onclick="document.getElementById('paymentModal').style.display='none'" style="border:none; background:none; color:red; margin-top:10px;">Cerrar</button>
+    </div>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
