--- a/index.html
+++ b/index.html
@@ -6,70 +6,63 @@
     <title>SmartCargo | May Roga LLC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
-        body { background: #000814; color: #333; font-family: sans-serif; padding: 10px; margin:0; }
-        .card { max-width: 500px; margin: auto; background: white; border-radius: 15px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 35px rgba(0,0,0,0.4); }
-        .hero { background: #001a35; color: white; padding: 15px; border-radius: 8px; text-align: center; margin-bottom: 20px; border: 1px solid #d4af37; }
-        .hero b { color: #d4af37; display: block; font-size: 16px; text-transform: uppercase; }
-        .lang-bar { display: flex; justify-content: center; gap: 5px; margin-bottom: 15px; }
-        .lang-bar button { font-size: 9px; padding: 0 5px; height: 22px; line-height: 22px; }
-        .tier-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 10px; margin-bottom: 20px; }
-        .tier-btn { border: 2px solid #001a35; padding: 12px; text-align: center; cursor: pointer; border-radius: 8px; background: #f8f9fa; font-weight: bold; font-size: 12px; transition: 0.3s; }
-        .tier-btn.active { background: #001a35; color: white; border-color: #d4af37; }
-        .btn-main { background: #001a35; color: white; width: 100%; height: 50px; font-weight: bold; border: none; cursor: pointer; border-radius: 8px; text-transform: uppercase; }
+        body { background: #000814; color: #333; font-family: sans-serif; padding: 10px; }
+        .card { max-width: 500px; margin: auto; background: white; border-radius: 15px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
+        .hero { background: #001d3d; color: white; padding: 15px; border-radius: 10px; text-align: center; margin-bottom: 10px; border: 1px solid #d4af37; }
+        .legal { font-size: 8px; color: #777; background: #f9f9f9; padding: 8px; border-radius: 5px; margin-bottom: 15px; text-align: justify; }
+        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
+        .btn-opt { border: 2px solid #001d3d; padding: 10px; border-radius: 8px; text-align: center; cursor: pointer; font-size: 10px; font-weight: bold; background: #f8f9fa; }
+        .selected { background: #001d3d !important; color: white !important; }
+        .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 8px; cursor: pointer; }
+        .timer { background: #d4af37; color: black; text-align: center; font-weight: bold; padding: 8px; border-radius: 8px; margin-bottom: 15px; font-size: 13px; }
         #mainApp { display: none; margin-top: 20px; }
-        .timer { background: #d4af37; color: #000; text-align: center; font-weight: bold; padding: 8px; border-radius: 5px; margin-bottom: 10px; font-size: 14px; }
-        .report { background: #f1f3f5; padding: 15px; border-left: 6px solid #001a35; margin-top: 20px; border-radius: 8px; font-size: 14px; white-space: pre-wrap; }
-        .warning-flash { animation: blink 0.8s infinite; color: #ff0000; }
-        @keyframes blink { 50% { opacity: 0.4; } }
+        .report { background: #f1f3f5; border-left: 5px solid #001d3d; padding: 15px; border-radius: 8px; font-size: 14px; white-space: pre-wrap; }
     </style>
 </head>
-<body>
-
+<body onclick="resetIdle()">
 <div class="card">
-    <div class="lang-bar">
-        <button onclick="setLang('en')">EN</button>
-        <button onclick="setLang('es')">ES</button>
-        <button onclick="setLang('fr')">FR</button>
-        <button onclick="setLang('pt')">PT</button>
-    </div>
-
     <div class="hero">
-        <b>Profit Protection</b>
-        <p style="font-size:11px; margin:0;">Technical solutions for Sea, Air & Land. We prevent rejections. We are the brain of your logistics chain.</p>
+        <h4 style="margin:0; font-weight:900; color:#d4af37;">SMARTCARGO</h4>
+        <p style="font-size:10px; margin:0;">WE SAVE YOUR MONEY • PREVENT FINES</p>
+    </div>
+    <div class="legal">
+        <strong>LEGAL:</strong> Private Advisory by May Roga LLC. NOT Gov/TSA/IATA. We do not touch cargo.
     </div>
 
     <div id="accessSection">
-        <label style="font-weight:bold; font-size:12px;">1. SELECT SERVICE TIER:</label>
-        <div class="tier-grid">
-            <div class="tier-btn" onclick="selTier(5, this)">COURIER ($5)</div>
-            <div class="tier-btn" onclick="selTier(10, this)">STANDARD ($10)</div>
-            <div class="tier-btn" onclick="selTier(45, this)">HAZMAT ($45)</div>
-            <div class="tier-btn" onclick="selTier(95, this)">PROJECT ($95)</div>
+        <label style="font-size:11px; font-weight:bold;">1. WHO ARE YOU?</label>
+        <div class="grid">
+            <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">SHIPPER / OWNER</div>
+            <div class="btn-opt role-btn" onclick="selRole('Forwarder', this)">FORWARDER</div>
+            <div class="btn-opt role-btn" onclick="selRole('Trucker', this)">TRUCKER</div>
+            <div class="btn-opt role-btn" onclick="selRole('Operator', this)">OPERATOR</div>
         </div>
-        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / BOL / Tracking ID">
-        <button id="activateBtn" class="btn-main">Unlock Advisory</button>
+        <label style="font-size:11px; font-weight:bold;">2. SELECT TIER:</label>
+        <div class="grid">
+            <div class="btn-opt tier-btn" onclick="selTier(5, this)">COURIER ($5)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(10, this)">STANDARD ($10)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(45, this)">CRITICAL ($45)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(95, this)">PROJECT ($95)</div>
+        </div>
+        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / BOL / ID">
+        <button id="activateBtn" class="btn-main">VALIDATE & ACCESS</button>
     </div>
 
     <div id="mainApp">
         <div id="timerDisp" class="timer"></div>
-        <div id="greeting" style="font-size:13px; font-weight:bold; color:#001a35; margin-bottom:15px; background:#eef2f7; padding:10px; border-radius:8px;"></div>
         <form id="advForm">
-            <div style="border:2px dashed #001a35; padding:20px; text-align:center; cursor:pointer; background:#fafafa; border-radius:10px;" onclick="document.getElementById('fileInput').click()">
-                <strong>📸 SCAN EVIDENCE / DOCUMENTS</strong>
+            <div style="border:1px dashed #ccc; padding:15px; text-align:center; cursor:pointer; font-size:12px;" onclick="document.getElementById('fileInput').click()">
+                📸 SCAN DOCS (OPTIONAL)
             </div>
-            <input type="file" id="fileInput" multiple style="display:none" onchange="previewFiles()">
-            <div id="previewContainer" style="display:flex; flex-wrap:wrap; margin-top:10px;"></div>
-            
-            <button type="button" id="voiceBtn" class="btn-main" style="background:#c62828; height:40px; margin: 10px 0;">🎤 SPEAK PROBLEM</button>
-            <textarea id="promptArea" class="u-full-width" style="height:100px;" placeholder="What is your doubt or fear?"></textarea>
-            
-            <button type="submit" class="btn-main" style="background:#1b5e20;">Get Solution</button>
-            <button type="button" class="btn-main" style="background:#666; height:30px; font-size:10px; margin-top:10px;" onclick="window.location.reload()">Clear / New Query</button>
+            <input type="file" id="fileInput" style="display:none" onchange="showPreview()">
+            <img id="mainPreview" style="width:100%; max-height:200px; object-fit:contain; margin-top:10px; display:none;">
+            <textarea id="promptArea" class="u-full-width" style="height:100px; margin-top:10px;" placeholder="Describe what you see..."></textarea>
+            <button type="submit" class="btn-main" style="background:#1b5e20;">GET SOLUTION</button>
+            <button type="button" class="btn-main" style="background:#666; height:30px; font-size:10px; margin-top:10px;" onclick="location.reload()">NEW QUERY</button>
         </form>
         <div id="advResponse"></div>
     </div>
 </div>
-
 <script src="app.js"></script>
 </body>
 </html>
