--- a/index.html
+++ b/index.html
@@ -1,64 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>SmartCargo | May Roga LLC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
-        body { background: #000814; color: #333; font-family: sans-serif; padding: 10px; }
-        .card { max-width: 500px; margin: auto; background: white; border-radius: 15px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 10px 30px rgba(0,0,0,0.5); }
-        .hero { background: #001d3d; color: white; padding: 15px; border-radius: 10px; text-align: center; margin-bottom: 10px; border: 1px solid #d4af37; }
-        .legal { font-size: 8px; color: #777; background: #f9f9f9; padding: 8px; border-radius: 5px; margin-bottom: 15px; text-align: justify; }
-        .grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 15px; }
-        .btn-opt { border: 2px solid #001d3d; padding: 10px; border-radius: 8px; text-align: center; cursor: pointer; font-size: 10px; font-weight: bold; background: #f8f9fa; }
+        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; }
+        .card { max-width: 500px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 40px rgba(0,0,0,0.5); }
+        .banner { background: #001d3d; color: white; padding: 15px; border-radius: 12px; text-align: center; border: 1px solid #d4af37; }
+        .lang-bar { display: flex; justify-content: center; gap: 8px; margin: 10px 0; }
+        .lang-btn { font-size: 10px; padding: 2px 10px; cursor: pointer; background: #eee; border: 1px solid #ccc; border-radius: 4px; }
+        .lang-btn.active { background: #d4af37; color: black; border-color: black; }
+        .btn-opt { border: 2px solid #001d3d; padding: 10px; border-radius: 10px; text-align: center; cursor: pointer; font-size: 11px; font-weight: bold; margin-bottom: 8px; background: #f8f9fa; }
         .selected { background: #001d3d !important; color: white !important; }
-        .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 8px; cursor: pointer; }
-        .timer { background: #d4af37; color: black; text-align: center; font-weight: bold; padding: 8px; border-radius: 8px; margin-bottom: 15px; font-size: 13px; }
+        .btn-main { background: #001d3d; color: white; width: 100%; height: 50px; font-weight: bold; border: none; border-radius: 10px; cursor: pointer; text-transform: uppercase; }
+        .timer { background: #d4af37; color: black; text-align: center; font-weight: bold; padding: 8px; border-radius: 8px; margin-bottom: 15px; }
         #mainApp { display: none; margin-top: 20px; }
-        .report { background: #f1f3f5; border-left: 5px solid #001d3d; padding: 15px; border-radius: 8px; font-size: 14px; white-space: pre-wrap; }
+        .report { background: #f1f3f5; border-left: 6px solid #001d3d; padding: 18px; border-radius: 10px; white-space: pre-wrap; }
     </style>
 </head>
 <body onclick="resetIdle()">
 <div class="card">
-    <div class="hero">
-        <h4 style="margin:0; font-weight:900; color:#d4af37;">SMARTCARGO</h4>
-        <p style="font-size:10px; margin:0;">WE SAVE YOUR MONEY • PREVENT FINES</p>
+    <div class="banner">
+        <h3 style="margin:0; font-weight:900; color:#d4af37;">SMARTCARGO</h3>
+        <p style="font-size:11px; margin:0;">ASESORÍA TÉCNICA • MAY ROGA LLC</p>
     </div>
-    <div class="legal">
-        <strong>LEGAL:</strong> Private Advisory by May Roga LLC. NOT Gov/TSA/IATA. We do not touch cargo.
+
+    <div class="lang-bar">
+        <button class="lang-btn active" onclick="setLang('es', this)">ESPAÑOL</button>
+        <button class="lang-btn" onclick="setLang('en', this)">ENGLISH</button>
+        <button class="lang-btn" onclick="setLang('fr', this)">FRANÇAIS</button>
+        <button class="lang-btn" onclick="setLang('pt', this)">PORTUGUÊS</button>
     </div>
 
     <div id="accessSection">
-        <label style="font-size:11px; font-weight:bold;">1. WHO ARE YOU?</label>
-        <div class="grid">
-            <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">SHIPPER / OWNER</div>
+        <label style="font-size:11px; font-weight:bold;">1. ROL DEL CLIENTE:</label>
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
+            <div class="btn-opt role-btn" onclick="selRole('Shipper', this)">SHIPPER / DUEÑO</div>
             <div class="btn-opt role-btn" onclick="selRole('Forwarder', this)">FORWARDER</div>
-            <div class="btn-opt role-btn" onclick="selRole('Trucker', this)">TRUCKER</div>
-            <div class="btn-opt role-btn" onclick="selRole('Operator', this)">OPERATOR</div>
+            <div class="btn-opt role-btn" onclick="selRole('Trucker', this)">CAMIONERO</div>
+            <div class="btn-opt role-btn" onclick="selRole('Operator', this)">OPERADOR / COUNTER</div>
         </div>
-        <label style="font-size:11px; font-weight:bold;">2. SELECT TIER:</label>
-        <div class="grid">
+        <label style="font-size:11px; font-weight:bold; margin-top:10px;">2. NIVEL DE SERVICIO:</label>
+        <div style="display:grid; grid-template-columns: 1fr 1fr; gap:10px;">
             <div class="btn-opt tier-btn" onclick="selTier(5, this)">COURIER ($5)</div>
-            <div class="btn-opt tier-btn" onclick="selTier(10, this)">STANDARD ($10)</div>
-            <div class="btn-opt tier-btn" onclick="selTier(45, this)">CRITICAL ($45)</div>
-            <div class="btn-opt tier-btn" onclick="selTier(95, this)">PROJECT ($95)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(10, this)">ESTÁNDAR ($10)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(45, this)">CRÍTICO ($45)</div>
+            <div class="btn-opt tier-btn" onclick="selTier(95, this)">PROYECTO ($95)</div>
         </div>
-        <input type="text" id="awbField" class="u-full-width" placeholder="AWB / BOL / ID">
-        <button id="activateBtn" class="btn-main">VALIDATE & ACCESS</button>
+        <input type="text" id="awbField" class="u-full-width" placeholder="Referencia / AWB">
+        <button id="activateBtn" class="btn-main">PAGAR Y COMENZAR</button>
     </div>
 
     <div id="mainApp">
         <div id="timerDisp" class="timer"></div>
         <form id="advForm">
-            <div style="border:1px dashed #ccc; padding:15px; text-align:center; cursor:pointer; font-size:12px;" onclick="document.getElementById('fileInput').click()">
-                📸 SCAN DOCS (OPTIONAL)
-            </div>
+            <div style="border:1px dashed #ccc; padding:15px; text-align:center; cursor:pointer;" onclick="document.getElementById('fileInput').click()">📸 SCAN (OPCIONAL)</div>
             <input type="file" id="fileInput" style="display:none" onchange="showPreview()">
             <img id="mainPreview" style="width:100%; max-height:200px; object-fit:contain; margin-top:10px; display:none;">
-            <textarea id="promptArea" class="u-full-width" style="height:100px; margin-top:10px;" placeholder="Describe what you see..."></textarea>
-            <button type="submit" class="btn-main" style="background:#1b5e20;">GET SOLUTION</button>
-            <button type="button" class="btn-main" style="background:#666; height:30px; font-size:10px; margin-top:10px;" onclick="location.reload()">NEW QUERY</button>
+            <textarea id="promptArea" class="u-full-width" style="height:120px; margin-top:15px; border-radius:10px;" placeholder="Dime qué quieres que revisemos juntos..."></textarea>
+            <button type="submit" class="btn-main" style="background:#1b5e20;">GENERAR SOLUCIÓN</button>
         </form>
         <div id="advResponse"></div>
     </div>
