--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SmartCargo | May Roga LLC</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
     <style>
-        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; margin:0; }
+        body { background: #000b1a; color: #333; font-family: sans-serif; padding: 10px; margin: 0; }
         .card { max-width: 500px; margin: auto; background: white; border-radius: 20px; padding: 25px; border-top: 10px solid #d4af37; box-shadow: 0 15px 40px rgba(0,0,0,0.5); }
         .lang-container { display: flex; justify-content: center; gap: 5px; margin-bottom: 15px; border-bottom: 1px solid #eee; padding-bottom: 10px; }
         .lang-btn { font-size: 10px; padding: 5px 12px; cursor: pointer; background: #f0f0f0; border: 1px solid #ccc; border-radius: 5px; font-weight: bold; }
@@ -18,7 +18,7 @@
         #mainApp { display: none; margin-top: 20px; }
         #previewContainer { display: none; width: 100%; border-radius: 12px; overflow: hidden; border: 3px solid #001d3d; margin-bottom: 15px; background: #000; }
         #mainPreview { width: 100%; height: auto; display: block; max-height: 400px; object-fit: contain; }
-        .report { background: #f1f3f5; border-left: 6px solid #001d3d; padding: 18px; border-radius: 10px; white-space: pre-wrap; font-size: 14px; margin-top: 15px; border-top: 1px solid #ddd; }
+        .report { background: #f1f3f5; border-left: 6px solid #001d3d; padding: 18px; border-radius: 10px; white-space: pre-wrap; font-size: 14px; margin-top: 15px; }
     </style>
 </head>
 <body onclick="resetIdle()">
